# open-nexus-OS

./: .clinerules  .cursor-rules  .cursorignore  .cursorrules  .dockerignore  .gitignore  .gitmodules  .markdownlint.json  .markdownlintignore  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE  README.md  SECURITY.md  TASK-0007-HANDOFF.md  TASK-0008-HANDOFF.md  TASK-0008B-HANDOFF.md  TASK-0010-HANDOFF.md  agents.md  clippy.toml  cross-task-ipc-results.md  cursorignore.TO_RENAME  dummy  flake.nix  gdb.cmd  ipc-benchmark-cross-task-results.csv  ipc-benchmark-results.csv  ipc-benchmark-summary.md  justfile  my-nexus-key.pkgar  my-nexus-key.pub  neuron-boot.map  package-lock.json  (+5 more)
tests/dsl_apps_conformance/: Cargo.toml
tests/dsl_apps_conformance/tests/: apps_compile.rs  chat.rs  counter.rs  hover_sweep.rs  search.rs  settings.rs
tests/dsl_apps_conformance/tests/common/: mod.rs
tests/dsl_conformance/: Cargo.toml
tests/dsl_conformance/src/: lib.rs
tests/dsl_conformance/tests/: corpus.rs  query.rs  transcript.rs
tests/dsl_goldens/: Cargo.toml
tests/dsl_goldens/src/: lib.rs
tests/dsl_goldens/tests/: i18n_packs.rs  scenes.rs
tests/dsl_v0_1a_host/: Cargo.toml
tests/dsl_v0_1a_host/fixtures/: proof_surface.nx
tests/dsl_v0_1a_host/goldens/: proof_surface.nxir
tests/dsl_v0_1a_host/src/: lib.rs
tests/dsl_v0_1a_host/tests/: corpus.rs  determinism.rs
tests/e2e/: Cargo.toml
tests/e2e/src/: lib.rs
tests/e2e/tests/: bundlemgrd_roundtrip.rs  host_roundtrip.rs  samgrd_roundtrip.rs
tests/e2e_policy/: Cargo.toml
tests/e2e_policy/src/: lib.rs
tests/input_v1_0_host/: Cargo.toml
tests/input_v1_0_host/src/: lib.rs
tests/input_v1_0_host/tests/: hid_contract.rs  keymaps_contract.rs  pointer_accel_contract.rs  repeat_contract.rs  touch_contract.rs
tests/remote_e2e/: Cargo.toml
tests/remote_e2e/src/: lib.rs
tests/remote_e2e/tests/: remote.rs  remote_packagefs.rs  remote_pkgfs.rs
tests/ui_v10_goldens/: Cargo.toml
tests/ui_v10_goldens/goldens/: accordion.bgra.hex  appicon_native.bgra.hex  appicon_wrapped.bgra.hex  avatar_initials.bgra.hex  avatar_square.bgra.hex  badge_outline.bgra.hex  badge_success.bgra.hex  banner_success.bgra.hex  banner_warning.bgra.hex  button_default_dark.bgra.hex  button_destructive.bgra.hex  button_disabled.bgra.hex  button_focus.bgra.hex  button_glass.bgra.hex  button_hover.bgra.hex  button_pressed.bgra.hex  card_panel_dark.bgra.hex  card_subtle.bgra.hex  checkbox_off.bgra.hex  checkbox_on.bgra.hex  chip_outline.bgra.hex  chip_selected.bgra.hex  dsl_counter_after_inc.bgra.hex  dsl_counter_busy.bgra.hex  dsl_counter_initial.bgra.hex  dsl_env_tablet_portrait.bgra.hex  dsl_todo_initial.bgra.hex  dsl_todo_loaded.bgra.hex  dsl_todo_loading.bgra.hex  dsl_todo_locale_de.bgra.hex  icon_chevron_right.bgra.hex  icon_close.bgra.hex  icon_plus.bgra.hex  icon_star.bgra.hex  lucide_arrow_right.bgra.hex  lucide_check.bgra.hex  lucide_menu.bgra.hex  pagination.bgra.hex  progress_64.bgra.hex  progress_dark.bgra.hex  (+29 more)
tests/ui_v10_goldens/src/: lib.rs
tests/ui_v10_goldens/tests/: a11y.rs  goldens.rs
tests/ui_v2c_host/: Cargo.toml  build.rs
tests/ui_v2c_host/src/: lib.rs
tests/ui_v3a_host/: Cargo.toml
tests/ui_v3a_host/src/: lib.rs
tests/ui_v3b_host/: Cargo.toml
tests/ui_v3b_host/src/: lib.rs
tests/ui_v4_host/: Cargo.toml
tests/ui_v4_host/src/: backdrop_tests.rs  cache_tests.rs  chain_tests.rs  kawase_tests.rs  layer_tests.rs  lib.rs  msdf_tests.rs  nine_slice_tests.rs  sdf_tests.rs  tile_tests.rs
tests/ui_v5b_host/: Cargo.toml
tests/ui_v5b_host/src/: lib.rs
tests/updates_host/: Cargo.toml
tests/updates_host/src/: lib.rs
tests/updates_host/tests/: ota_flow.rs
tests/vfs_e2e/: Cargo.toml
tests/vfs_e2e/src/: lib.rs
tests/vfs_e2e/tests/: readdir_e2e.rs  vfs_roundtrip.rs
tools/fsck-nxfs/: Cargo.toml
tools/fsck-nxfs/src/: main.rs
tools/nxb-pack/: Cargo.toml
tools/nxb-pack/src/: main.rs
tools/nxb-pack/tests/: payload_kind.rs  repo_bundles.rs
tools/nxs-pack/: Cargo.toml  build.rs
tools/nxs-pack/src/: main.rs
tools/repro/: Cargo.toml
tools/repro/src/: lib.rs  main.rs
tools/sbom/: Cargo.toml
tools/sbom/src/: lib.rs  main.rs
userspace/config/: Cargo.toml  build.rs
userspace/config/nexus-config/src/: lib.rs
userspace/crash/: Cargo.toml
userspace/crash/src/: lib.rs
userspace/dsoftbus/: Cargo.toml
userspace/dsoftbus/core/: Cargo.toml
userspace/dsoftbus/core/src/: lib.rs
userspace/dsoftbus/src/: core_contract.rs  discovery_packet.rs  facade_discovery.rs  host.rs  host_quic.rs  inproc.rs  lib.rs  mux_v2.rs  net_facade.rs  os.rs  quic_feasibility.rs  remote_proxy_policy.rs  transport_selection.rs
userspace/dsoftbus/tests/: core_contract_rejects.rs  discovery_packet.rs  facade_discovery.rs  facade_transport.rs  host_transport.rs  mux_contract_rejects_and_bounds.rs  mux_frame_state_keepalive_contract.rs  mux_open_accept_data_rst_integration.rs  quic_feasibility_contract.rs  quic_host_transport_contract.rs  quic_selection_contract.rs  reject_discovery.rs  reject_remote_proxy.rs
userspace/dsoftbus/tests/integration/: cli.rs
userspace/exec-payloads/: Cargo.toml  build.rs
userspace/exec-payloads/src/: hello_elf.rs  lib.rs
userspace/identity/: Cargo.toml
userspace/identity/src/: lib.rs
userspace/identity/tests/: device_id.rs
userspace/identity/tests/integration/: cli.rs
userspace/keystore/: Cargo.toml
userspace/keystore/src/: lib.rs
userspace/memory/: Cargo.toml
userspace/memory/src/: lib.rs
userspace/memory/tests/: host_contract.rs  reject_contract.rs
userspace/nexus-gfx/: Cargo.toml
userspace/nexus-gfx/src/: buffer.rs  command_buffer.rs  device.rs  error.rs  fence.rs  lib.rs  queue.rs  render_encoder.rs  types.rs
userspace/nexus-gfx/src/backend/: cpu_mock.rs  error.rs  mod.rs  traits.rs  types.rs
userspace/nexus-gfx/src/cache/: descriptor_set.rs  mod.rs  render_target.rs  texture_atlas.rs
userspace/nexus-gfx/tests/: command_buffer_tests.rs  raster_tests.rs  render_encoder_tests.rs
(+2913 files in other folders)
