[workspace]
members = [
    "source/kernel/neuron-boot",
    "source/kernel/neuron",
    "source/libs/*",
    "source/services/*",
    "source/init/*",
    "userspace/*",
    "userspace/apps/*",
    "source/apps/selftest-client",
    "source/apps/init-lite",
    "userspace/apps/launcher",
    "source/drivers/net/virtio",
    "source/drivers/storage/virtio-blk",
    "source/drivers/console/virtio",
    "tools/*",
    "userspace/ui/renderer",
    "tests/e2e",
    "tests/e2e_policy",
    "tests/logd_e2e",
    "tests/remote_e2e",
    "tests/vfs_e2e",
    "tests/updates_host",
    "tests/ui_host_snap",
    "tests/ui_windowd_host",
    "tests/ui_v2a_host"
]
resolver = "2"
exclude = [
    # Exclude the umbrella directory that contains sub-crates to avoid Cargo
    # treating it as a workspace member without its own Cargo.toml.
    "userspace/apps",
    "userspace/ui",
    # Vendored patch crate; not a first-class workspace member.
    "vendor/smoltcp",
    # QEMU source and patch artifacts (not a Rust crate).
    "tools/qemu",
    "tools/qemu-src",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"

[patch.crates-io]
# Enforced to avoid cargo-deny duplicate `bitflags` majors (smoltcp upstream still uses bitflags 1.x).
# This vendored copy is kept identical to smoltcp 0.10.0 except for the `bitflags = "2"` dependency
# bump (and any minimal compatibility fixes).
smoltcp = { path = "vendor/smoltcp" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
strip = "symbols"
