[workspace]
members = [
    "source/kernel/neuron-boot",
    "source/kernel/neuron",
    "source/libs/*",
    "source/services/*",
    "source/init/*",
    "userspace/*",
    "userspace/apps/*",
    "source/apps/selftest-client",
    "source/apps/init-lite",
    "userspace/apps/launcher",
    "userspace/apps/search",
    "source/drivers/net/virtio",
    "source/drivers/storage/virtio-blk",
    "source/drivers/gpud",
    "source/drivers/console/virtio",
    "tools/*",
    "userspace/ui/renderer",
    "userspace/ui/theme",
    "userspace/ui/svg",
    "userspace/ui/image",
    "userspace/ui/shape",
    "userspace/ui/cursor",
    "userspace/ui/layout-types",
    "userspace/ui/layout",
    "userspace/ui/effects",
    "userspace/ui/msdf",
    "userspace/ui/sdf",
    "userspace/ui/animation",
    "userspace/ui/style",
    "userspace/ui/theme-tokens",
    "userspace/ui/widgets/virtual_list",
    "userspace/ui/widgets/panel",
    "userspace/ui/widgets/button",
    "userspace/ui/widgets/window",
    "userspace/ui/widgets/text_field",
    "userspace/ui/widgets/badge",
    "userspace/ui/widgets/toggle",
    "userspace/ui/widgets/app_icon",
    "userspace/ui/widgets/card",
    "userspace/ui/widgets/checkbox",
    "userspace/ui/widgets/radio",
    "userspace/ui/widgets/segment",
    "userspace/ui/shells/desktop",
    "userspace/nexus-gfx",
    "tests/ui_v3a_host",
    "tests/ui_v3b_host",
    "tests/ui_v4_host",
    "tests/ui_v5b_host",
    "tests/ui_v10_goldens",
    "tests/e2e",
    "tests/e2e_policy",
    "tests/logd_e2e",
    "tests/remote_e2e",
    "tests/vfs_e2e",
    "tests/updates_host",
    "tests/ui_host_snap",
    "tests/ui_windowd_host",
    "tests/ui_v2a_host",
    "tests/ui_v2c_host",
    "tests/input_v1_0_host"
]
resolver = "2"
exclude = [
    # Exclude the umbrella directory that contains sub-crates to avoid Cargo
    # treating it as a workspace member without its own Cargo.toml.
    "userspace/apps",
    "userspace/ui",
    # Vendored patch crate; not a first-class workspace member.
    "vendor/smoltcp",
    # QEMU source and patch artifacts (not a Rust crate).
    "tools/qemu",
    "tools/qemu-src",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"

[patch.crates-io]
# Enforced to avoid cargo-deny duplicate `bitflags` majors (smoltcp upstream still uses bitflags 1.x).
# This vendored copy is kept identical to smoltcp 0.10.0 except for the `bitflags = "2"` dependency
# bump (and any minimal compatibility fixes).
smoltcp = { path = "vendor/smoltcp" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
strip = "symbols"