# Copyright 2026 Open Nexus OS Contributors
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dsl_conformance"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
nexus-dsl-core = { path = "../../userspace/dsl/core" }
nexus-dsl-ir = { path = "../../userspace/dsl/ir" }
nexus-dsl-runtime = { path = "../../userspace/dsl/runtime" }
