[package]
name = "input_v1_0_host"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
hid = { path = "../../userspace/hid" }
touch = { path = "../../userspace/touch" }
keymaps = { path = "../../userspace/keymaps" }
key-repeat = { path = "../../userspace/key-repeat" }
pointer-accel = { path = "../../userspace/pointer-accel" }
