[package]
name = "ui_v10_goldens"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "ui_v10_goldens"
path = "src/lib.rs"

[dependencies]
nexus-layout = { path = "../../userspace/ui/layout" }
nexus-layout-types = { path = "../../userspace/ui/layout-types" }
nexus-style = { path = "../../userspace/ui/style" }
nexus-theme-tokens = { path = "../../userspace/ui/theme-tokens" }
nexus-widget-button = { path = "../../userspace/ui/widgets/button" }
nexus-widget-badge = { path = "../../userspace/ui/widgets/badge" }
nexus-widget-toggle = { path = "../../userspace/ui/widgets/toggle" }
nexus-widget-app-icon = { path = "../../userspace/ui/widgets/app_icon" }
nexus-widget-card = { path = "../../userspace/ui/widgets/card" }
nexus-widget-checkbox = { path = "../../userspace/ui/widgets/checkbox" }
nexus-widget-radio = { path = "../../userspace/ui/widgets/radio" }
nexus-widget-segment = { path = "../../userspace/ui/widgets/segment" }
nexus-widget-text-field = { path = "../../userspace/ui/widgets/text_field" }
nexus-widget-search-bar = { path = "../../userspace/ui/widgets/search_bar" }
nexus-widget-slider = { path = "../../userspace/ui/widgets/slider" }
nexus-widget-stepper = { path = "../../userspace/ui/widgets/stepper" }
nexus-widget-select = { path = "../../userspace/ui/widgets/select" }
nexus-widget-text-area = { path = "../../userspace/ui/widgets/text_area" }
nexus-widget-chip = { path = "../../userspace/ui/widgets/chip" }
nexus-widget-avatar = { path = "../../userspace/ui/widgets/avatar" }
nexus-widget-toolbar = { path = "../../userspace/ui/widgets/toolbar" }
nexus-widget-tab-bar = { path = "../../userspace/ui/widgets/tab_bar" }
nexus-widget-pagination = { path = "../../userspace/ui/widgets/pagination" }
nexus-widget-accordion = { path = "../../userspace/ui/widgets/accordion" }
nexus-widget-sidebar = { path = "../../userspace/ui/widgets/sidebar" }
nexus-widget-tree-view = { path = "../../userspace/ui/widgets/tree_view" }
nexus-widget-icon = { path = "../../userspace/ui/widgets/icon" }
nexus-widget-rating = { path = "../../userspace/ui/widgets/rating" }
ui_host_snap = { path = "../ui_host_snap" }
nexus-widget-spinner = { path = "../../userspace/ui/widgets/spinner" }
nexus-widget-progress-bar = { path = "../../userspace/ui/widgets/progress_bar" }
nexus-widget-toast = { path = "../../userspace/ui/widgets/toast" }
nexus-widget-skeleton = { path = "../../userspace/ui/widgets/skeleton" }
nexus-widget-banner = { path = "../../userspace/ui/widgets/banner" }
nexus-widget-refresher = { path = "../../userspace/ui/widgets/refresher" }
