# Copyright 2026 Open Nexus OS Contributors
# SPDX-License-Identifier: Apache-2.0

[package]
name = "ui_v2c_host"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
capnp = "0.24.1"
windowd = { path = "../../source/services/windowd" }

[build-dependencies]
capnpc = "0.24.1"
