[package]
name = "ui_v3a_host"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
nexus-layout = { path = "../../userspace/ui/layout" }
nexus-layout-types = { path = "../../userspace/ui/layout-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
path = "src/lib.rs"