[package]
name = "ui_v3a_host"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
nexus-shape = { path = "../../userspace/ui/shape" }
nexus-layout = { path = "../../userspace/ui/layout" }
nexus-layout-types = { path = "../../userspace/ui/layout-types" }
input-live-protocol = { path = "../../userspace/input-live-protocol" }
windowd = { path = "../../source/services/windowd" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
path = "src/lib.rs"