[package]
name = "ui_v4_host"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
nexus-layout = { path = "../../userspace/ui/layout" }
nexus-layout-types = { path = "../../userspace/ui/layout-types" }
nexus-effects = { path = "../../userspace/ui/effects" }
nexus-msdf = { path = "../../userspace/ui/msdf" }
nexus-sdf = { path = "../../userspace/ui/sdf" }
input-live-protocol = { path = "../../userspace/input-live-protocol" }
windowd = { path = "../../source/services/windowd" }

[dev-dependencies]
