[package]
name = "updates_host"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Open Nexus OS Contributors"]

[dependencies]
capnp = "0.24"
ed25519-dalek = "2"
nexus-idl-runtime = { path = "../../userspace/nexus-idl-runtime" }
sha2 = "0.10"
tar = "0.4"
updates = { path = "../../userspace/updates" }
