[package]
name = "nxb-pack"
version = "0.1.0"
edition = "2021"
authors = ["Open Nexus OS Contributors"]
license = "Apache-2.0"
description = "Packs ELF payloads into minimal Nexus bundle directories"

[dependencies]
exec-payloads = { path = "../../userspace/exec-payloads" }
capnp = "0.24"
hex = "0.4"
nexus-idl-runtime = { path = "../../userspace/nexus-idl-runtime" }
toml = "0.8"
