[package]
name = "repro"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Deterministic reproducibility metadata capture and verifier"

[dependencies]
hex = "0.4"
nexus-evidence = { path = "../../source/libs/nexus-evidence" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
