[package]
name = "sbom"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Deterministic CycloneDX SBOM generator for Nexus bundles"

[dependencies]
hex = "0.4"
nexus-evidence = { path = "../../source/libs/nexus-evidence" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
thiserror = "2"
