[package]
name = "nexus-config"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
path = "nexus-config/src/lib.rs"

[dependencies]
capnp = { version = "0.24", default-features = false, features = ["alloc", "unaligned"] }
jsonschema = { version = "0.46.2", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"

[build-dependencies]
capnpc = "0.24"

[dev-dependencies]
tempfile = "3.27.0"
