[package]
name = "dsoftbus"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Open Nexus OS Contributors"]

[dependencies]
capnp = "0.24"
ed25519-dalek = { version = "2", features = ["rand_core"] }
identity = { path = "../identity" }
nexus-idl-runtime = { path = "../nexus-idl-runtime" }
nexus-net = { path = "../nexus-net" }
once_cell = "1"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snow = "0.9"
sha2 = "0.10"
thiserror = "1"
x25519-dalek = { version = "2", features = ["static_secrets"] }
