[package]
name = "identity"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Open Nexus OS Contributors"]

[dependencies]
ed25519-dalek = "2"
hex = "0.4"
rand_core = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
rand_core = { version = "0.6", features = ["std"] }
