[package]
name = "identity"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Open Nexus OS Contributors"]

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
rand_core = { version = "0.6", features = ["getrandom","std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
rand_core = { version = "0.6", features = ["std"] }
