[package]
name = "keystore"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
ed25519-dalek = { version = "2", default-features = false, features = ["std", "pkcs8"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
hex = "0.4"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
